# kidsonics-oneriser

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: CombFilter.h  CustomLookAndFeel.h  Filter.h  Reverb.h  RiserProcessor.h  pa.h
